# SZE-MOSZE-2020-SeGITseg

./: Hero.cpp  Hero.h  JSON.cpp  JSON.h  Makefile  Monster.cpp  Monster.h  README.md  annotated.html  autotoc_md0.html  classJSONParser-members.html  classJSONParser.html  classJsonparser.html  classUnit-members.html  classUnit.html  classes.html  cppcheck_test.sh  doxconf  files.html  functions.html  functions_func.html  functions_rela.html  graph_legend.html  index.html  jsonparser.cpp  jsonparser.h  jsonparser_8h_source.html  main.cpp  memory_test.sh  pages.html  run_test.sh  unit.cpp  unit.h  unit_8h_source.html
.github/workflows/: docs_workflow.yml  test_workflow.yml  unit_test.yml
search/: all_0.js  all_2.js  all_4.js  all_5.js  all_6.js  classes_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  related_0.js  searchdata.js
test/: CMakeLists.txt  expected_results.txt  parser_test.cpp  results.txt  unit_test.cpp  unit_tests.cpp
units/: invalid_unit.json  unit_1.json  unit_2.json  unit_3.json
units/test_units/: invalid_unit_1.json  invalid_unit_2.json  invalid_unit_3.json  valid_unit_1.json  valid_unit_2.json
